--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
                          <div>
                             <div>
                                 <h3 style="color: darkmagenta;">اسنپ فود</h3>
-                                <p>تجربه سفارش غذا، از زودفود تا اسنپ ‌فو </p>
+                                <p>تجربه سفارش غذا، از زودفود تا اسنپ ‌فود  </p>
                             </div>
                             <div class="icons">
                                 <button><i class="bi bi-instagram"></i></button>
